# VibeCall

./: Cargo.toml
data/: vibecall.db  vibecall.db-shm  vibecall.db-wal
migrations/: 20250926051424_create_users_table.sql  20250929040608_create_rooms_table.sql  20250929043240_create_room_memebers_table.sql  20250930084631_create_calls_table.sql  20250930084814_create_call_participants_table.sql
src/: lib.rs  main.rs
src/auth/: handlers.rs  mod.rs  routes.rs
src/calls/: contract.rs  entities.rs  handlers.rs  mod.rs  repository.rs  routes.rs  service.rs  signalling_server.rs  websocket.rs
src/infrastructure/: contract.rs  database.rs  error_handler.rs  handlers.rs  mod.rs  routes.rs  templates.rs
src/infrastructure/middlewares/: auth_middleware.rs
src/rooms/: contract.rs  entities.rs  handlers.rs  mod.rs  repository.rs  routes.rs  service.rs
src/shared/: file_service.rs  mod.rs  response.rs  utils.rs
src/shared/base_types/: email.rs  mod.rs  phone_number.rs
src/users/: contract.rs  entities.rs  handlers.rs  mod.rs  repository.rs  routes.rs  service.rs
static/css/: index.css  login.css  style.css
static/js/: index.js  login.js
templates/: base.html  index.html  login.html  register.html  videos.html
