[package]
name = "vibecall"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = { version = "0.8.5", features = ["std"] }
regex = "1.11.3"
lazy_static = "1.5.0"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
dashmap = "6.1.0"
futures = "0.3.31"
